--- a/dock_driver/requirements.txt
+++ b/dock_driver/requirements.txt
@@ -5,12 +5,10 @@ pydantic-settings==2.1.0
 httpx==0.26.0
 # # # # python-jose==3.3.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861
-python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981pyyaml==6.0.1
-pymodbus==3.5.4
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981pyyaml==6.0.1pymodbus==3.5.4
 paho-mqtt==2.2.1
 aiomqtt==1.2.1
-aiohttp==3.11.18  # Updated to fix DoS, request smuggling, path traversal, and XSS vulnerabilitiesasyncio==3.4.3
-redis==5.0.1
+aiohttp==3.11.18  # Updated to fix DoS, request smuggling, path traversal, and XSS vulnerabilitiesasyncio==3.4.3redis==5.0.1
 prometheus-client==0.19.0
 argon2-cffi==23.1.0  # For secure password hashing
 python-magic==0.4.27  # For secure file type detection
