--- a/federated_learning/server/requirements.txt
+++ b/federated_learning/server/requirements.txt
@@ -1,4 +1,4 @@
-torch==2.5.2
+torch==2.6.1
 torchvision>=0.14.0
 flwr>=1.4.0
 numpy>=1.22.0
@@ -10,8 +10,7 @@ tensorboard>=2.11.0
 requests>=2.28.0
 fastapi==0.115.12  # Updated to latest version for security improvements
 uvicorn>=0.21.0
-python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-53981aiohttp==3.11.18
-argon2-cffi==23.1.0  # For secure password hashing
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-53981aiohttp==3.11.18argon2-cffi==23.1.0  # For secure password hashing
 pydantic==2.11.4  # For secure data validation
 python-magic==0.4.27  # For secure file type detection
 safety==2.3.5  # For dependency vulnerability scanning
