--- a/sim/requirements.txt
+++ b/sim/requirements.txt
@@ -37,14 +37,13 @@ isort>=5.13.2
 # Security
 cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861
-python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-53981
-# Visualization
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-53981# Visualization
 open3d>=0.17.0
 pyqtgraph>=0.13.3
 pyopengl>=3.1.7
 
 # Machine learning (optional)
-torch==2.5.2
+torch==2.6.1
 torchvision>=0.17.0
 tinygrad>=0.9.0
 argon2-cffi==23.1.0  # For secure password hashing
