--- a/tactical_capabilities/sigint_service/requirements.txt
+++ b/tactical_capabilities/sigint_service/requirements.txt
@@ -5,8 +5,7 @@ sqlalchemy==2.0.27
 asyncpg==0.29.0
 pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861  # Downgraded to fix CVE-2024-53861
 passlib==1.7.4
-python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981httpx==0.27.0  # Updated from 0.26.0 for security fixes
-python-dotenv==1.0.0
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-539810  # Updated to latest version to fix CVE-2024-53981httpx==0.27.0  # Updated from 0.26.0 for security fixespython-dotenv==1.0.0
 pika==1.3.2
 redis==5.0.4  # Updated to latest version
 numpy==1.26.3
