--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^14.5.2",
     "axios": "^1.6.7",
     "chart.js": "^4.4.2",
+    "dompurify": "^3.0.11",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -16,8 +17,7 @@
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.5.2",
-    "dompurify": "^3.0.11"
+    "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,5 +43,10 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://backend:8000"
+  "proxy": "http://backend:8000",
+  "devDependencies": {
+    "cookie": "^0.7.0",
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31"
+  }
 }
