--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,8 +45,18 @@
   },
   "proxy": "http://backend:8000",
   "devDependencies": {
+    "@babel/helpers": "^7.26.0",
+    "@babel/runtime": "^7.26.0",
+    "braces": "^3.0.2",
     "cookie": "^0.7.0",
+    "cross-spawn": "^7.0.3",
+    "http-proxy-middleware": "^2.0.6",
+    "ip": "^2.0.0",
+    "lodash": "^4.17.21",
+    "micromatch": "^4.0.5",
     "nth-check": "^2.1.1",
-    "postcss": "^8.4.31"
+    "postcss": "^8.4.31",
+    "semver": "^7.5.4",
+    "webpack-dev-middleware": "^5.3.3"
   }
 }
