--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,9 +49,10 @@
     "@babel/runtime": "^7.26.0",
     "braces": "^3.0.2",
     "cookie": "^0.7.0",
-    "cross-spawn": "^7.0.3",
-    "http-proxy-middleware": "^2.0.6",
-    "ip": "^2.0.0",
+    "cross-spawn": "^7.0.5",
+    "html-minifier": "^4.0.0",
+    "http-proxy-middleware": "^2.0.8",
+    "ip": "^2.0.1",
     "lodash": "^4.17.21",
     "micromatch": "^4.0.5",
     "nth-check": "^2.1.1",
