--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -142,11 +142,14 @@ jobs:
         name: bandit-results
         path: bandit-results.json
     - name: Initialize CodeQL
-      uses: github/codeql-action/init@v2
+      uses: github/codeql-action/init@v3
       with:
         languages: python, javascript
+        queries: security-extended,security-and-quality
     - name: Perform CodeQL Analysis
-      uses: github/codeql-action/analyze@v2
+      uses: github/codeql-action/analyze@v3
+      with:
+        upload: true
   secret-scanning:
     name: Secret Scanning
     runs-on: ubuntu-latest
@@ -219,7 +222,7 @@ jobs:
         output: trivy-results.sarif
         severity: CRITICAL,HIGH
     - name: Upload Trivy scan results to GitHub Security tab
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: trivy-results.sarif
     - name: Run Trivy filesystem scan
