--- a/.github/workflows/npm-grunt.yml
+++ b/.github/workflows/npm-grunt.yml
@@ -1,14 +1,19 @@
 name: NodeJS with Grunt
-true:
+
+on:
   schedule:
-  - cron: 0 0 * * *
+  - cron: '0 0 * * *'
   push:
     branches:
     - main
   pull_request:
     branches:
     - main
-  workflow_dispatch: null
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  actions: read
 jobs:
   build:
     runs-on: ubuntu-latest
