--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,40 +1,41 @@
 # FastAPI
-fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version
-uvicorn==0.34.0
+fastapi==0.115.12  # Updated to latest version for security improvements
+uvicorn==0.34.2  # Updated to latest version
 pydantic==2.11.4  # Updated to latest version
-email-validator==2.1.1
-python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981# Database
-sqlalchemy==2.0.38
+email-validator==2.2.0  # Updated to latest version
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-53981
+
+# Database
+sqlalchemy==2.0.40  # Updated to latest version
 asyncpg==0.29.0
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.10  # Updated to latest version
 
 # Authentication
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
-# # # # # # python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
-pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861  # Updated to fix CVE-2024-53861
+# python-jose==3.4.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+pyjwt==2.10.1  # Updated to fix CVE-2024-53861
 passlib==1.7.4
-bcrypt==4.1.2
+bcrypt==4.3.0  # Updated to latest version
 argon2-cffi==23.1.0
 
 # Networking
-httpx==0.27.0
-redis==5.0.4  # Updated to latest version
-websockets==12.0
+httpx==0.28.1  # Updated to latest version
+redis==6.0.0  # Updated to latest version
+websockets==15.0.1  # Updated to latest version
 
 # Security
-cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119  # Updated to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119, CVE-2024-2511, CVE-2024-4603
-pyopenssl==24.0.0
+cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119, CVE-2024-2511, CVE-2024-4603
+pyopenssl==25.0.0  # Updated to latest version
 certifi==2024.10.5  # Updated to latest version
 python-magic==0.4.27
-argon2-cffi==23.1.0  # Added for secure password hashing
 
 # Utils
-python-dotenv==1.0.1
-aiofiles==23.2.1  # Updated to latest version
+python-dotenv==1.1.0  # Updated to latest version
+aiofiles==24.1.0  # Updated to latest version
 pykml==0.2.0
 gpxpy==1.5.0
 
 # Rate limiting
 slowapi==0.1.9
-safety==2.3.5  # For dependency vulnerability scanning
+safety==3.5.0  # Updated to latest version for dependency vulnerability scanning
 bandit==1.7.7  # For security static analysis
