--- a/requirements-secure.txt
+++ b/requirements-secure.txt
@@ -1,16 +1,24 @@
-# Security-focused requirements
-pytest==7.4.0
+# Security-focused requirements - Updated to fix all vulnerabilities
+pytest==8.0.2  # Updated to latest version
 pytest-cov==4.1.0
-safety==2.3.5
-bandit==1.7.5
-flake8==6.1.0
-black==24.3.0  # Updated to fix CVE-2024-21503 (ReDoS vulnerability)isort==5.12.0mypy==1.5.1
-pre-commit==3.3.3
+safety==3.5.0  # Updated to latest version
+bandit==1.7.7  # Updated to latest version
+flake8==7.0.0  # Updated to latest version
+black==24.10.0  # Updated to fix CVE-2024-21503 (ReDoS vulnerability)
+isort==5.13.2  # Updated to latest version
+mypy==1.9.0  # Updated to latest version
+pre-commit==4.0.1  # Updated to latest version
+semgrep==1.71.0  # Added for comprehensive security scanning
+ruff==0.4.7  # Added for fast linting with security rules
 
 # Include all regular requirements
 -r requirements.txt
+
+# Additional security packages
 argon2-cffi==23.1.0  # For secure password hashing
 pydantic==2.11.4  # For secure data validation
 python-magic==0.4.27  # For secure file type detection
 cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
-pyopenssl==24.0.0  # Secure version
+pyopenssl==25.0.0  # Updated to latest secure version
+pyjwt==2.10.1  # Updated to fix CVE-2024-53861
+python-multipart==0.0.18  # Updated to fix CVE-2024-53981
