--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 # Core dependencies
 typer==0.15.3  # Updated to latest version
-fastapi==0.115.12  # Updated to latest version for security improvements  # Updated to latest version for security improvements  # Updated to latest version for security improvements
+fastapi==0.115.12  # Updated to latest version for security improvements
 uvicorn[standard]==0.34.2  # Updated to latest version
 pydantic==2.11.4  # Updated to latest version
 email-validator==2.2.0  # Updated to latest version
-python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-539811  # Updated to latest version to fix CVE-2024-53981asgiref==3.8.1
+python-multipart==0.0.18  # Updated to latest version to fix CVE-2024-53981
+asgiref==3.8.1
 # Database
 sqlalchemy==2.0.40  # Updated to latest version
 alembic==1.15.2  # Updated to latest version
@@ -18,7 +19,7 @@ redis==6.0.0  # Updated to latest version
 
 # Authentication
 # Replacing python-jose with PyJWT due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
-# # # # # # # # # python-jose[cryptography]==3.3.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
+# python-jose[cryptography]==3.3.0  # Removed due to vulnerabilities CVE-2024-33664 and CVE-2024-33663
 # pyjwt moved to security section with version 2.10.1 to fix CVE-2024-53861
 passlib[bcrypt]==1.7.4
 bcrypt==4.3.0
@@ -28,11 +29,12 @@ argon2-cffi==23.1.0
 httpx==0.28.1
 websockets==15.0.1
 boto3==1.38.14
-aiohttp==3.11.18  # Updated to fix CVE-2024-52303, CVE-2024-52304, CVE-2024-42367aiomqtt==1.2.1
+aiohttp==3.11.18  # Updated to fix CVE-2024-52303, CVE-2024-52304, CVE-2024-42367
+aiomqtt==1.2.1
 # Security
 cryptography==46.0.0  # Updated to latest version to fix CVE-2024-26130, CVE-2024-12797, CVE-2024-6119
 pyopenssl==25.0.0
-pyjwt==2.8.0  # Using a secure version that doesn't have CVE-2024-53861  # Updated to fix CVE-2024-53861
+pyjwt==2.10.1  # Updated to fix CVE-2024-53861
 certifi==2024.10.5  # Updated to latest version
 python-magic==0.4.27
 # argon2-cffi already included in authentication section
@@ -51,13 +53,17 @@ anthropic==0.51.0  # Updated to latest version
 google-generativeai==0.8.5  # Updated to latest version
 tiktoken==0.9.0  # Updated to latest version
 langchain==0.3.25  # Updated to latest version
-langchain-community==0.4.0  # Updated to fix CVE-2024-8309, CVE-2024-2965, CVE-2024-469464  # Updated to latest version, fixes CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
-transformers==4.50.0  # Updated to latest versionsentence-transformers==4.1.0  # Updated to latest versionaccelerate==1.6.0  # Updated to latest version
+langchain-community==0.4.0  # Updated to latest version, fixes CVE-2024-8309, CVE-2024-2965, CVE-2024-46946
+transformers==4.50.0  # Updated to latest version
+sentence-transformers==4.1.0  # Updated to latest version
+accelerate==1.6.0  # Updated to latest version
 colbert-ai==0.2.21
 einops==0.8.1
 tinygrad==0.9.0  # Lightweight ML runtime
 safetensors==0.4.3  # For loading safetensors models
-torch==2.6.1  # Pinned to specific version for better securityonnx==1.17.0  # ONNX model format support, updated to fix CVE-2024-7776# WARNING: ONNX has a known vulnerability (CVE-2024-5187) in download_model_with_test_data function.
+torch==2.6.1  # Pinned to specific version for better security
+onnx==1.17.0  # ONNX model format support, updated to fix CVE-2024-7776
+# WARNING: ONNX has a known vulnerability (CVE-2024-5187) in download_model_with_test_data function.
 # Mitigation: Do not use download_model_with_test_data function with untrusted sources.
 onnxruntime==1.22.0  # Updated to latest version
 tensorflow==2.19.0  # Updated to latest version
